--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ http://www.templatemo.com/tm-498-stimulus
                               <p class="wow fadeInUp" data-wow-delay="0.9s">Being a Tech Enthusiast and Design Freak I understand the market requirements from all Dimensions and give my best. I'm looking forward to help, and work together.</p>
                               <p class="wow fadeInUp" data-wow-delay="0.9s">So, Let's get started and build something AMAZING together!</p>
                               
-                              <a href="/images/Resume-Interview.png" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s" download="Resume-Aman_Harsh">Download CV</a>
+                              <a href="/images/Resume.pdf" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s" download="Resume-Aman_Harsh">Download CV</a>
                               <!-- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                               <a href="#about" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Get Started</a> -->
                          </div>
@@ -331,7 +331,7 @@ http://www.templatemo.com/tm-498-stimulus
                          </div>
 
                          <div id="contact-form">
-                              <form action="#template-mo" method="post">
+                              <form action="mailto:aman.harsh.1451@gmail.com" method="post">
                                    <div class="wow fadeInUp" data-wow-delay="1s">
                                         <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Your Name">
                                    </div>
@@ -384,10 +384,10 @@ http://www.templatemo.com/tm-498-stimulus
 		<div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
+                    <div class="wow fadeInUp footer-copyright" data-wow-delay="0.8s">
                          <p>iAmanArtifex  |  Aman Harsh </p>
                     </div>
-				<ul class="wow fadeInUp social-icon" data-wow-delay="2s">
+				<ul class="wow fadeInUp social-icon" data-wow-delay="1s">
                          <li><a href="https://www.facebook.com/aman.harsh.311/" class="fa fa-facebook"></a></li>
                          <!-- <li><a href="#" class="fa fa-twitter"></a></li> -->
                          <li><a href="https://github.com/AmanHarsh" class="fa fa-github"></a></li>
