--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@ http://www.templatemo.com/tm-498-stimulus
                               <p class="wow fadeInUp" data-wow-delay="0.9s">Being a Tech Enthusiast and Design Freak I understand the market requirements from all Dimensions and give my best. I'm looking forward to help, and work together.</p>
                               <p class="wow fadeInUp" data-wow-delay="0.9s">So, Let's get started and build something AMAZING together!</p>
                               
-                              <a href="/images/Resume.pdf" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s" download="Resume-Aman_Harsh">Download CV</a>
+                              <a href="./images/Resume.pdf" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s" download="Resume-Aman_Harsh">Download CV</a>
+
                               <!-- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                               <a href="#about" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Get Started</a> -->
+
                          </div>
                     </div>
                </div>
